# Aqua_Feed_Pi

./: 0.NEW_2ROLLER2.stl  5in1.gcode.3mf  ArticulatedWhaleShark_3color_v1.gcode.3mf  List of items  PipeforFeederPlate.stl  Plate_Roller_Pipe.3mf  README.md  Roller.stl  Sensors.docx  index.html  pin.stl  script.js  style.css
3D_files/: design3dmm.skp
Bambu/: 5in1.3mf  CABLEDUCK.stl  Case1.gcode.3mf  Case1.stl  Case2.stl  CoverCase.stl  FeederPlate.stl  Fish.gcode.3mf  Fish_Gun.3mf  Fish_Gun.gcode.3mf  Gun.gcode.3mf  lid fish and logo.stl  spiral_version2.stl
Bambu/JBL/JBL live 650 BTNC  hinge fix  - 5336160/: LICENSE.txt  README.txt
Bambu/JBL/JBL live 650 BTNC  hinge fix  - 5336160/files/: JBL_hinge_FIX.stl  fix_casque_JBL_v2.3mf  fix_casque_JBL_v2.f3d
Main/include/: feeder.h  motor.h
Main/src/: fish_api.cpp  ph_sensor.cpp
Motor_File/: gpioevent.h
Project Details/: Gantt Chart.xlsx  List of Items  Sensors Detail
S_camera/: main
api/: CMakeLists.txt  MotorController.h  main.cpp
camera_detection/: .gitmodules  CMakeLists.txt
camera_detection/include/: camera.h  feeder.h  fish_api.h  fish_monitoring_system.h  ph_sensor.h  pir_sensor.h
camera_detection/src/: .main.cpp.swo  camera.cpp  feeder.cpp  feeder1.py  fish_api.cpp  fish_monitoring_system.cpp  image_processor.cpp  main.cpp  motor.cpp  motor_main.cpp  ph_sensor.cpp  pir_sensor.cpp
codes/: PH_Sensor  PH_Sensor.cpp  PIR_Sensor.cpp  ph_calibration.txt  ph_sensor.cpp  ph_sensor.cpp.save
content/: Sensors
main_codes/: CMakeLists.txt
main_codes/include/: camera.h  feeder.h  fish_api.h  fish_monitoring_system.h  image_processor.h  motor.h  ph_sensor.h  pir_sensor.h
main_codes/src/: CMakeCache.txt  Makefile  camera.cpp  cmake_install.cmake  feeder.cpp  fish_api.cpp  fish_monitor  fish_monitoring_system.cpp  image_processor.cpp  main.cpp  motor_main.cpp  ph_sensor.cpp  pir_sensor.cpp
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  CameraStream.tsx
